Alteração no nos modelos das atas: finalizada, fracassada e deserta

--- a/lib/pdf/bidding/minute/templates/minute_failure.html
+++ b/lib/pdf/bidding/minute/templates/minute_failure.html
@@ -7,28 +7,28 @@
   }
 </style>
 
-<p><b>
-  ATA DA REUNIÃO DA COMISSÃO DE LICITAÇÕES DA @@cooperative.name@@ CNPJ Nº @@cooperative.cnpj@@ - @@env_covenant_resource@@, CONVÊNIO Nº @@covenant.number@@.
-</b></p>
+<p>
+  <b>
+    ATA DA REUNIÃO DA COMISSÃO DE LICITAÇÕES DA @@cooperative.name@@ CNPJ Nº @@cooperative.cnpj@@ - @@env_covenant_resource@@, CONVÊNIO Nº @@covenant.number@@.
+  </b>
+</p>
 <br/>
 
 <p>
-  Aos <b>@@bidding.closing_date@@</b>, <b>@@cooperative.legal_representative.name@@</b>, da associação <b>@@cooperative.name@@</b> juntamente com comissão de compras/licitação da entidade realizou a análise das propostas de preços enviadas por meio do aplicativo SOL pelas empresas interessadas em participar do processo licitatório <b>@@bidding.title@@</b> com objetivo de <b>@@bidding.description@@</b>
+  Aos <b>@@bidding.closing_date@@</b>, o(a) <b>@@cooperative.legal_representative.name@@</b> da <b>@@cooperative.name@@</b> juntamente com a comissão de compras/licitação da entidade, realizou a análise das propostas de preços enviadas por meio do aplicativo SOL pelas empresas interessadas em participar do processo licitatório <b>@@bidding.title@@</b> com objetivo de adquirir <b>@@bidding.description@@</b>.
 </p>
 
-<p>@@invite.suppliers.sentence@@</p>
-
-<p>@@bidding.lot_proposals.providers@@</p>
-
-<br/>
+<p>
+  A @@invite.suppliers.provider_sentence@@ enviaram propostas de preços.
+</p>
 
 <p>
-  Após a análise do contrato social de todas as empresas proponentes, foi verificado que não existe qualquer impedimento para que elas possam concorrer entre si. Em seguida ocorreu a análise das propostas recebidas, conforme discriminado abaixo:
+  Em seguida ocorreu a análise das propostas recebidas, conforme discriminado abaixo:
 </p>
 
 <p>@@bidding.proposals.sentence@@</p>
 
-<p>@@bidding.comments.sentence@@</p>
+<p>A entidade @@cooperative.name@@, por intermédio do seu representante legal @@cooperative.legal_representative.name@@ procedeu então com a análise dos documentos de habilitação da empresa declarada vencedora, estando a mesma apta a firmar contrato.</p>
 
 <p>
   Desta forma, a licitação @@bidding.title@@ foi declarada fracassada pelo(s) seguinte(s) motivo(s): @@failure_event.comment@@
