acrescentadp texto CPF antes de CNPJ para empresas

--- a/lib/pdf/contract/classification/templates/contract_commodity.html
+++ b/lib/pdf/contract/classification/templates/contract_commodity.html
@@ -74,7 +74,7 @@
   Este contrato nº @@number_contract@@ é celebrado em @@date_contract@@ entre a <b>@@name_cooperative@@</b>,
   com sede <b>@@cooperative_address@@</b>, neste ato representada por sua
   Presidente, <b>@@cooperative_legal_representative_name@@</b>,
-  e a empresa <b>@@name_provider@@</b>, inscrita no CNPJ nº @@document_provider@@, com sede na @@provider_address@@,
+  e a empresa <b>@@name_provider@@</b>, inscrita no CPF/CNPJ nº @@document_provider@@, com sede na @@provider_address@@,
   neste ato representada pelo Sr. <b>@@provider_legal_representative_name@@</b>, para fornecimento de <b>@@lot_name@@</b>,
   conforme anexo 1, de acordo com as condições estipuladas na licitação nº @@title_bidding@@,
   realizada através do Sistema Online de Licitação – SOL e com as cláusulas a seguir discriminadas:
