--- a/lib/pdf/contract/classification/templates/contract_work.html
+++ b/lib/pdf/contract/classification/templates/contract_work.html
@@ -66,7 +66,7 @@
   A <b>@@name_cooperative@@</b> com sede no município de @@city_cooperative@@ - @@cooperative_state@@, 
   inscrita no CNPJ/MF sob o nº @@number_covenant@@, doravante denominada simplesmente <b>CONTRATANTE</b>, neste ato representada, 
   na forma do seu Estatuto Social, por seu Presidente – @@cooperative_legal_representative_name@@, inscrito no CPF/MF sob o 
-  nº @@cooperative_legal_representative_cpf@@ e a empresa @@name_provider@@, inscrita no CNPJ/MF sob o 
+  nº @@cooperative_legal_representative_cpf@@ e a empresa @@name_provider@@, inscrita no CPF/CNPJ sob o 
   nº @@document_provider@@ com sede na @@provider_address@@, neste ato representada, na forma de seu contrato
   social, pelo seu @@provider_legal_representative_name@@, inscrito no CPF/MF sob o nº @@provider_legal_representative_cpf@@, 
   doravante denominada simplesmente <b>CONTRATADA</b>, resolvem celebrar o presente Termo de
