--- a/lib/pdf/contract/classification/templates/contract_service.html
+++ b/lib/pdf/contract/classification/templates/contract_service.html
@@ -55,7 +55,7 @@
 
 <p>
   A @@name_cooperative@@, com sede @@cooperative_address@@, neste ato representada por sua Presidente,
-  @@cooperative_legal_representative_name@@, autoriza a empresa @@name_provider@@, inscrita no CNPJ nº @@document_provider@@,
+  @@cooperative_legal_representative_name@@, autoriza a empresa @@name_provider@@, inscrita no CPF/CNPJ nº @@document_provider@@,
   com sede na @@provider_address@@, neste ato representada pelo Sr. @@provider_legal_representative_name@@, a prestar o serviço(s) de @@lot_name@@,
   conforme anexo 1, de acordo com as condições estipuladas na licitação nº @@title_bidding@@, realizada através do Sistema Online
   de Licitação – SOL, mediante as Cláusulas e condições seguintes:
