Inclusão de Anexos Pagamento Antecipado no edital

--- a/lib/pdf/bidding/edict/templates/edict.html
+++ b/lib/pdf/bidding/edict/templates/edict.html
@@ -57,7 +57,30 @@
 
 <div class="break-before"></div>
 
-<p class="tab50"><b>Anexo 2 - DAS DIRETRIZES ANTICORRUPÇÃO BIRD</b></p><br/>
+<p class="tab50"><b>Anexo 2 - Antecipação de pagamento</b></p><br/>
+
+<p>Para o licitante vencedor que necessite solicitar pagamento antecipado, mediante apresentação de justificativa, deverão ser obedecidos os critérios estabelecidos abaixo discriminados:</p><br/>
+<p><b>PAGAMENTO DO CONTRATO</b></p><br/>
+<p>a)Os pagamentos serão feitos de acordo com o Cronograma Físico-Financeiro constante no Contrato.</p>
+<p>b)As notas fiscais e as respectivas faturas dos Bens e Serviços contratados, serão expressas em moeda brasileira.</p>
+<p>c)As solicitações do Contratado ao Contratante para pagamento deverão ser feitas por escrito, acompanhadas de faturas que descrevam, de forma apropriada, os Bens entregues e os Serviços executados e quando aplicável, acompanhadas dos documentos de embarque, sem prejuízo do cumprimento das demais obrigações estipuladas no Contrato.</p>
+<p>d)Os pagamentos deverão ser efetuados dentro dos prazos estabelecidos em contrato.</p>
+<p>e)Os pagamentos ao Contratado serão efetuados na base DDP / Destino Final.</p>
+<p>f)Todos os pagamentos serão feitos em moeda brasileira.</p><br/>
+
+<p><b>PAGAMENTO ANTECIPADO</b></p><br/>
+<p>a)A solicitação com a justificativa para a antecipação de pagamento deverá ser enviada via e-mail ou Ofício à Contratante e somente será concedida após análise e aprovação da Coordenação do Projeto Bahia Produtiva.</p>
+<p>b)Sendo aprovada a antecipação de pagamento, deverá ser firmado aditivo entre as partes contratantes para a inclusão de cláusula de antecipação de pagamento mediante garantia.</p>
+<p>c)O limite de antecipação de pagamento é de até 40% do valor do contrato.</p>
+<p>d)Os pagamentos antecipados serão processados após a apresentação de solicitação com justificativa por parte da empresa CONTRATADA e somente serão realizados mediante a apresentação de uma das garantias discriminadas abaixo no valor correspondente ao mesmo percentual a ser antecipado:</p>
+<p class="tab50"><b>.</b> Garantia Bancária emitida por uma instituição bancária aceitável pelo Comprador;</p>
+<p class="tab50"><b>.</b> Fiança Bancária ou Carta Irrevogável de Crédito emitida por banco localizado no Brasil ou no exterior, de acordo com o modelo constante do Edital ou em outro modelo, desde que aceitável pelo Contratante; ou</p>
+<p class="tab50"><b>.</b> Cheque Administrativo.</p>
+<p>e)A garantia de pagamento antecipado, deverá ser apresentada no ato da assinatura do Contrato.</p>
+
+<div class="break-before"></div>
+
+<p class="tab50"><b>Anexo 3 - DAS DIRETRIZES ANTICORRUPÇÃO BIRD</b></p><br/>
 
 <p><b>DA FRAUDE E DA CORRUPÇÃO</b> - O <b>CONTRATADO</b> deve observar e fazer observar, por seus fornecedores e subcontratados, se admitida subcontratação, o mais alto padrão de ética durante todo o processo de licitação, de contratação e de execução do objeto contratual.</p><br/>
 
