Revertendo commits específicos da car-bahia

--- a/lib/pdf/bidding/minute/templates/minute_desert.html
+++ b/lib/pdf/bidding/minute/templates/minute_desert.html
@@ -7,15 +7,13 @@
   }
 </style>
 
-<p>
-  <b>
-    ATA DA REUNIÃO DA COMISSÃO DE LICITAÇÕES DA @@cooperative.name@@ CNPJ Nº @@cooperative.cnpj@@ - @@env_covenant_resource@@, CONVÊNIO Nº @@covenant.number@@.
-  </b>
-</p>
+<p><b>
+  ATA DA REUNIÃO DA COMISSÃO DE LICITAÇÕES DA @@cooperative.name@@ CNPJ Nº @@cooperative.cnpj@@ - @@env_covenant_resource@@, CONVÊNIO Nº @@covenant.number@@.
+</b></p>
 <br/>
 
 <p>
-  Aos <b>@@bidding.closing_date@@</b>, o(a) <b>@@cooperative.legal_representative.name@@</b> da <b>@@cooperative.name@@</b> juntamente com a comissão de compras/licitação da entidade, realizou a análise das propostas de preços enviadas por meio do aplicativo SOL pelas empresas interessadas em participar do processo licitatório <b>@@bidding.title@@</b> com objetivo de adquirir <b>@@bidding.description@@</b>.
+  Aos <b>@@bidding.closing_date@@</b>, <b>@@cooperative.legal_representative.name@@</b>, da associação <b>@@cooperative.name@@</b> juntamente com comissão de compras/licitação da entidade realizou a análise das propostas de preços enviadas por meio do aplicativo SOL pelas empresas interessadas em participar do processo licitatório <b>@@bidding.title@@</b> com objetivo de <b>@@bidding.description@@</b>
 </p>
 
 <p>@@invite.suppliers.sentence@@</p>
